<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="15dp"
    android:background="@drawable/modalbottomsheet"
    tools:context=".onboarding.registration.signin.ModalSignInFragment">

    <ImageButton
        android:id="@+id/rectangle_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_top"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title_profile"/>

        <Button
            android:id="@+id/btn_volunteer"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_button"
            android:drawableTop="@drawable/volunteer_active"
            android:text="@string/volunteer_string"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_user"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_button"
            android:drawableTop="@drawable/user_inactive"
            android:text="@string/user_string"
            android:textColor="@color/blue_buttons" />

        <EditText
            android:id="@+id/edit_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_volunteer"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_textview"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/blue_buttons"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_fullname"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_textview"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/blue_buttons"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkbox_privacy_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/privacy_check"
            android:textColor="@color/blue_buttons"
            android:textSize="12sp" />

        <com.example.capstoneproject.utils.customButtons.BlueButtons
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_privacy_check"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/title_log_in"
            android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_create_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/made_by"
        android:textColor="@color/blue_font"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>