<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    tools:context=".splash.SplashScreenActivity">

    <RelativeLayout
        android:id="@+id/layout_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_app_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:textColor="@color/blue_font"
            android:fontFamily="@font/poppinsbold"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/tv_app_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name2"
            android:layout_toEndOf="@+id/tv_app_name1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsbold"
            android:textSize="35sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:textSize="15sp"
        android:text="@string/motto_app"
        android:layout_below="@id/layout_app_name"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>