<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".editprofile.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_chevron_left_24"
            android:contentDescription="@string/back_string"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinssemibold"
            android:gravity="center"
            android:text="@string/title_edit_profile"
            android:textColor="@color/blue_font"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/container_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_person_24_inactive"
            android:contentDescription="@string/title_profile"/>

        <ImageButton
            android:id="@+id/btn_browse_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_profile_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit"
            android:layout_alignBottom="@+id/img_profile"
            android:layout_alignEnd="@+id/img_profile"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_profile_picture"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_textview"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:autofillHints="@string/hint_name"
        android:hint="@string/hint_name"
        android:textAlignment="textStart"
        android:textColor="@color/blue_font"
        android:textSize="13sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_textview"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:autofillHints="@string/hint_email"
        android:hint="@string/hint_email"
        android:textAlignment="textStart"
        android:textColor="@color/blue_font"
        android:textSize="13sp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_textview"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:hint="@string/hint_phone"
        android:autofillHints="@string/hint_phone"
        android:textAlignment="textStart"
        android:textColor="@color/blue_font"
        android:textSize="13sp"/>

    <com.example.capstoneproject.utils.customButtons.BlueButtons
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/save"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>