<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.registration.authentication.SendOtpModalFragment">

    <TextView
        android:id="@+id/tv_title_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/title_verification"
        android:textAlignment="center"
        android:textColor="@color/blue_font"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/subtitle_verification"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textColor="@color/light_blue_subtitle_font"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/phone_title"
        android:textColor="@color/blue_buttons"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_verification"
        app:layout_constraintStart_toStartOf="@id/tv_phone_62"/>

    <TextView
        android:id="@+id/tv_phone_62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_62"
        android:textSize="15sp"
        android:textColor="@color/light_blue_subtitle_font"
        android:layout_marginStart="30dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:background="@drawable/background_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number"/>


    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_textview"
        android:fontFamily="@font/poppinsregular"
        android:autofillHints="@string/hint_phone_number"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/blue_buttons"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_phone_62"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number" />

    <com.example.capstoneproject.utils.customButtons.BlueButtons
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/next_string"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/made_by"
        android:textColor="@color/blue_font"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/btn_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>