<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/modalbottomsheet">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_log_out"
            android:textColor="@color/blue_font"
            android:textSize="25sp"
            android:fontFamily="@font/poppinssemibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_below="@+id/tv_title"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/title_subtitle_log_out"
            android:textColor="@color/light_blue_subtitle_font"
            android:textSize="12sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>


        <com.example.capstoneproject.utils.customButtons.WhiteButtons
            android:id="@+id/btn_yes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/yes_string"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="@id/tv_subtitle"/>

        <com.example.capstoneproject.utils.customButtons.BlueButtons
            android:id="@+id/btn_no"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_goneMarginStart="30dp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/white"
            android:text="@string/no_string"
            android:layout_toEndOf="@+id/btn_yes"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintEnd_toEndOf="@id/tv_subtitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>
